# aoc24

./: .gitignore  README.md  example.env  main.py  pyproject.toml  template.py.txt
.github/workflows/: main.yml
aoc/: __main__.py  template.py.txt
aoc/days/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day22.py  day23.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
aoc/util/: bench.py  env.py  fetch.py  file.py  parse.py  point.py  read.py  timer.py
days/: day1.py  day10.py  day11.py  day2.py  day3.py  day5.py  day6.py  day7.py  day8.py
src/: day1.py
src/util/: file.py  read.py
util/: env.py  fetch.py  file.py  parse.py  read.py  timer.py
