[project]
name = "aoc24"
version = "0.1.0"
description = "contains some solutions for advent of code 2024"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.9.3",
    "networkx>=3.4.2",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
